--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <h1>Draw a Bird with HTML5 Canvas</h1>
     <canvas id="animalCanvas" width="600" height="400"></canvas>
     <div>
-        <button onclick="drawBird()">Redraw Bird</button>
-        <button onclick="clearCanvas()">Clear Canvas</button>
+        <button id="redrawButton">Redraw Bird</button>
+        <button id="clearButton">Clear Canvas</button>
     </div>
 
     <script src="script.js"></script>
